--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "honey-bunny-portfolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://iamvan1sh.github.io/honey-bunny-portfolio/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,11 +13,13 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.7",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -25,6 +28,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.67.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
