--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.7",
     "swiper": "^10.2.0"
   },
